--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.foto {
+  width: 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.titulos{
+  color: #17a2b8;
+  font-size: 22px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 340px) and (max-width: 767px) {
+  .centrado{
+    text-align: center;
+  }
+  
+  .contacto{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+  }
+
+  .titulos{
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .texto{
+    text-align: center;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .titulos{
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .texto{
+    text-align: center;
   }
 }
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1600px) {
+  
+}
+
